--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
             window.location.hash = '';
         }
     </script>
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+    @*<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">*@
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     @Styles.Render("~/Content/myCss")
 </head>
     <body data-ng-app="myselflogApp">
@@ -94,6 +95,7 @@
         @*   @Scripts.Render("~/bundles/jqplot")*@
         @Scripts.Render("~/bundles/ajaxlogin")
         @Scripts.Render("~/bundles/bootstrap")
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
         @*<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>*@
     </body>
 </html>
