--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <!--[if lte IE 8]><script src="../../Scripts/html5shiv.js"></script><![endif]-->
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/prologue")
-    
+
     <noscript>
         @Styles.Render("~/Content/noscriptprologuecss")
     </noscript>
@@ -25,7 +25,7 @@
         }
     </style>
     <script type="text/javascript">
-        if (window.location.hash == '#_=_') {
+        if (window.location.hash === '#_=_') {
             window.location.hash = '';
         }
     </script>
@@ -34,67 +34,72 @@
     <link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/myCss")
 </head>
-    <body data-ng-app="myselflogApp">
-        <div ng-controller="LoaderController">
-            <span class="navbar-spinner" ng-show="hasPendingRequests()">...
-                <img src="../../Content/images/spinner.gif" alt="loading in progress">
-            </span>
+<body data-ng-app="myselflogApp">
+    <div ng-controller="LoaderController">
+        <span class="navbar-spinner" ng-show="hasPendingRequests()">
+            ...
+            <img src="../../Content/images/spinner.gif" alt="loading in progress">
+        </span>
+    </div>
+    <div id="header" class="skel-panels-fixed">
+        <div class="top">
+            <div id="logo">
+                <span class="image avatar48">
+                    @*<img src="images/avatar.jpg" alt="" />*@
+                </span>
+                <h1 id="title">MySelfLog</h1>
+                <span class="byline">Log your health</span>
+            </div>
+            <nav id="nav">
+                @Html.Partial("_UserSettings")
+                @*<ul>
+                        <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="icon icon-home">Intro</span></a></li>
+                        <li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="icon icon-th">Portfolio</span></a></li>
+                        <li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="icon icon-user">About Me</span></a></li>
+                        <li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="icon icon-envelope">Contact</span></a></li>
+                    </ul>*@
+            </nav>
         </div>
-        <div id="header" class="skel-panels-fixed">
-            <div class="top">
-                <div id="logo">
-                    <span class="image avatar48">
-                        @*<img src="images/avatar.jpg" alt="" />*@
-                    </span>
-                    <h1 id="title">MySelfLog</h1>
-                    <span class="byline">Log your health</span>
-                </div>
-                <nav id="nav">
-                    @Html.Partial("_UserSettings")
-                    @*<ul>
-                    <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="icon icon-home">Intro</span></a></li>
-                    <li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="icon icon-th">Portfolio</span></a></li>
-                    <li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="icon icon-user">About Me</span></a></li>
-                    <li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="icon icon-envelope">Contact</span></a></li>
+        <div class="bottom">
+            <!-- Social Icons -->
+            @*<ul class="icons">
+                    <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+                    <li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
+                    <li><a href="#" class="icon icon-github"><span>Github</span></a></li>
+                    <li><a href="#" class="icon icon-dribbble"><span>Dribbble</span></a></li>
+                    <li><a href="#" class="icon icon-envelope"><span>Email</span></a></li>
                 </ul>*@
-                </nav>
-            </div>
-            <div class="bottom">
-                <!-- Social Icons -->
-                @*<ul class="icons">
-                <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-                <li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
-                <li><a href="#" class="icon icon-github"><span>Github</span></a></li>
-                <li><a href="#" class="icon icon-dribbble"><span>Dribbble</span></a></li>
-                <li><a href="#" class="icon icon-envelope"><span>Email</span></a></li>
-            </ul>*@
-            </div>
         </div>
-        <div id="main">
-            <!-- Intro -->
-            <section id="top" class="one">
-                @RenderBody()
-            </section>
+    </div>
+    <div id="main">
+        <!-- Intro -->
+        <section id="top" class="one">
+            @RenderBody()
+        </section>
+    </div>
+    <!-- Footer -->
+    <div id="footer">
+        <!-- Copyright -->
+        <div class="copyright">
+            @*<p>&copy; 2013 Jane Doe. All rights reserved.</p>
+                <ul class="menu">
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>Images: <a href="http://ineedchemicalx.deviantart.com">Felicia Simion</a></li>
+                </ul>*@
         </div>
-        <!-- Footer -->
-        <div id="footer">
-            <!-- Copyright -->
-            <div class="copyright">
-                @*<p>&copy; 2013 Jane Doe. All rights reserved.</p>
-            <ul class="menu">
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Images: <a href="http://ineedchemicalx.deviantart.com">Felicia Simion</a></li>
-            </ul>*@
-            </div>
-        </div>
-        @Scripts.Render("~/bundles/jslibs")
-        @RenderSection("scripts", false)
-        @Scripts.Render("~/bundles/jqueryui")
-        @Scripts.Render("~/bundles/raphael")
-        <script src="~/Scripts/morris.min.js"></script>
-        @Scripts.Render("~/bundles/ajaxlogin")
-        <script src="~/Scripts/bootstrap.min.js"></script>
-        <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
-        <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
-    </body>
+    </div>
+    @Scripts.Render("~/bundles/jslibs")
+
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/raphael")
+    <script src="~/Scripts/morris.min.js"></script>
+    @Scripts.Render("~/bundles/ajaxlogin")
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
+    @*<script src="~/Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>*@
+    @RenderSection("scripts", false)
+    @*<script src="~/Scripts/angular-animate.js"></script>
+    <script src="~/Scripts/angular-ui/ui-bootstrap.js"></script>*@
+</body>
 </html>
