removed modal from profile cntrl and removed old template from profile view

--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,4 +1,4 @@
-﻿<script type="text/ng-template" id="mySendInviteModalContent.html">
+﻿<!--<script type="text/ng-template" id="mySendInviteModalContent.html">
     <div class="modal-header">
         <h3>Send an invite to a friend</h3>
     </div>
@@ -9,7 +9,7 @@
         <button class="btn btn-primary" ng-click="ok()">Send</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
-</script>
+</script>-->
 
 <div class="container">
     <header>
