rewrote the profile view removing date time accordion and all values not required to insert a basic log (need to be refactored in order to delete logs and share and add date and foodtypes)

--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,4 +1,4 @@
-﻿<!--<script type="text/ng-template" id="mySendInviteModalContent.html">
+﻿<script type="text/ng-template" id="mySendInviteModalContent.html">
     <div class="modal-header">
         <h3>Send an invite to a friend</h3>
     </div>
@@ -9,154 +9,48 @@
         <button class="btn btn-primary" ng-click="ok()">Send</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
-</script>-->
+</script>
 
 <div class="container">
     <header>
         <h2 class="alt">{{selectedprofile.name}}</h2>
     </header>
-    <form name="logForm" class="css-form">
-
-        <textarea style="display: none" data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
-        <!--<div id="logDate">
-            <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="item.logDate" show-weeks="false" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true"/>
-        </div>
-        <div id="logTime" ng-model="item.logTime" ng-change="changed()" class="well well-small" style="display: inline-block;">
-            <timepicker hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
-        </div>-->
-        <!--<div class="container">-->
+    <form name="logForm">
         <div class="row">
-            <div class='col-sm-6'>
-                <input type="number" min="1" max="800" name="value" data-ng-model="item.value" placeholder="Type a numeric value" style="height: 30px" />
+            <div class="col-md-12">
+                <input type="number" min="1" max="800" name="value" data-ng-model="item.value" placeholder="Type a numeric value" style="height: 30px; width: 250px" />
             </div>
-            <div class='col-sm-6'>
-                <div class="form-group">
-                    <div class='input-group date' id='logDateTime' ng-model="item.logDateTime">
-                        <input type='text' class="form-control" />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <script type="text/javascript">
-                $(function () {
-                    $('#logDateTime').datetimepicker();
-                });
-            </script>
         </div>
         <div class="row">
-            <div class='col-sm-6'>
-                <button class="btn btn-link" ng-click="isTerapyCollapsed = !isTerapyCollapsed">Log terapy</button>
-                <div id="terapyPanel" collapse="isTerapyCollapsed">
-                    <input type="number" min="0" max="200" name="slowvalue" data-ng-model="item.slowvalue" placeholder="SLOW terapy number" style="height: 30px" />
-                    <input type="number" min="0" max="200" name="fastvalue" data-ng-model="item.fastvalue" placeholder="FAST terapy number" style="height: 30px" />
-                </div>
+            <div class="col-md-6">
+                <input type="number" min="0" max="200" name="slowvalue" data-ng-model="item.slowvalue" placeholder="SLOW terapy number" style="height: 30px; width: 150px" />
             </div>
-            <div class='col-sm-6'>
-                <button class="btn btn-link" ng-click="isFoodCollapsed = !isFoodCollapsed">Log food</button>
-                <div id="foodPanel" collapse="isFoodCollapsed">
-                    <label ng-repeat="foodType in foodTypes">
-                        <input type="checkbox" ng-model="item.foodTypes[foodType]">
-                        <img ng-src="../FoodTypes/{{foodType}}.png" alt="{{foodType}}" />
-                    </label>
-                </div>
-                <input type="number" min="0" max="1000" name="calories" data-ng-model="item.calories" placeholder="Amount of calories" style="height: 30px" />
+            <div class="col-md-6">
+                <input type="number" min="0" max="200" name="fastvalue" data-ng-model="item.fastvalue" placeholder="FAST terapy number" style="height: 30px; width: 150px" />
             </div>
         </div>
-        <br />
+        <div class="row">
+            <!--<div class="col-md-6">
+                <label class="fooditems" ng-repeat="foodType in foodTypes">
+                    <input type="checkbox" ng-model="item.foodTypes[foodType]">
+                    <img ng-src="../FoodTypes/{{foodType}}.png" alt="{{foodType}}" />
+                </label>
+            </div>-->
+            <div class="col-md-12">
+                <input type="number" min="0" max="1000" name="calories" data-ng-model="item.calories" placeholder="Calories" style="height: 30px; width: 150px" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>
+            </div>
+            <div class="col-md-6">
+                <button id="btnReset" name="btnReset" ng-click="resetItem()" ng-disabled="loading" class="btn btn-warning">Reset</button>
+            </div>
+            </div>
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
-        <div id="logFormBotton">
-            <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>
-            <button id="btnReset" name="btnReset" ng-click="resetItem()" ng-disabled="loading" class="btn btn-warning">Reset</button>
-        </div>
     </form>
     {{active()}}
-    <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a>
-    </p>
-
-    <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. What is HTML?</a>
-                </h4>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse in">
-                <div class="panel-body">
-                    <p>HTML stands for HyperText Markup Language. HTML is the main markup language for describing the structure of Web pages. <a href="http://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. What is Bootstrap?</a>
-                </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse">
-                <div class="panel-body">
-                    <p>Bootstrap is a powerful front-end framework for faster and easier web development. It is a collection of CSS and HTML conventions. <a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank">Learn more.</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. What is CSS?</a>
-                </h4>
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse">
-                <div class="panel-body">
-                    <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="http://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <accordion close-others="oneAtATime">
-        <accordion-group heading="Static Header">
-            <accordion-heading>
-                Share profile options <!--<i class="icon-share"></i>-->
-            </accordion-heading>
-            <div id="profileOptions">
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
-                <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
-                <form name="friendForm">
-                    <label for="txtFriendEmail">Allow a friend to see your diary</label>
-                    <input type="email" ng-model="friendEmail" name="txtFriendEmail" id="txtFriendEmail" placeholder="Type your friend email here" />
-                    <span class="error" ng-show="friendForm.input.$error.email">Not valid email!</span>
-                    <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
-                    <div class="valueinnerlist" ng-repeat="friend in selectedprofile.friends | orderBy:email">
-                        <button ng-click="removeFriend(friend.email)" class="btn btn-warning">X</button>
-                        {{friend.email}}
-                        <button ng-click="openInvite(friend.email)" class="btn btn-primary">Invite</button>
-                    </div>
-                </form>
-            </div>
-        </accordion-group>
-        <accordion-group>
-            <accordion-heading>
-                Show values <!--<i class="icon-th-list"></i>-->
-            </accordion-heading>
-            <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
-                <button ng-click="remove(log)" class="btn btn-warning">X</button>
-                <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
-            </div>
-            <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
-        </accordion-group>
-        <accordion-group>
-            <accordion-heading>
-                Show terapies <!--<i class="icon-th-list"></i>-->
-            </accordion-heading>
-            <div class="valueinnerlist" ng-repeat="terapy in selectedprofile.terapies | orderBy:LogDate:reverse">
-                <button ng-click="removeTerapy(terapy)" class="btn btn-warning">X</button>
-                <span>IsSlow: {{terapy.isslow}} - {{terapy.terapyvalue}} - {{terapy.logdate}}</span>
-            </div>
-            <p ng-show="selectedprofile.terapies == 0">There are not any logged values</p>
-        </accordion-group>
-    </accordion>
-
+    <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
     <footer></footer>
 </div>
