--- a/MySelf.WebClient/Views/Diary/Index.cshtml
+++ b/MySelf.WebClient/Views/Diary/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@section scripts {
-
-    @Scripts.Render("~/bundles/angular")
+@*<script src="~/Scripts/angular.js"></script>
+    @Scripts.Render("~/bundles/angular")*@
     @Scripts.Render("~/bundles/myselflog")
 
 }
