--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
     <script src="~/Scripts/angular-resource.js"></script>
     <script src="~/Scripts/angular-route.js"></script>
 <script src="~/Scripts/angular-animate.js"></script>
-    <script src="~/app/js/services/myselflog.datacontext.js"></script>
+    <script src="~/Scripts/angular-ui/ui-bootstrap.js"></script>
     @RenderSection("scripts", false)
     @*<script src="~/Scripts/angular-animate.js"></script>
         <script src="~/Scripts/angular-ui/ui-bootstrap.js"></script>*@
