Removed unnecessary bundle; fixed bug saving logs and terapies; show the share link feature on profile view

--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                 </ul>*@
     </div>
 </div>
-    @Scripts.Render("~/bundles/raphael")
+    @*@Scripts.Render("~/bundles/raphael")*@
     @Scripts.Render("~/bundles/superciccio")
     @RenderSection("scripts", false)
 </body>
