--- a/MySelf.WebClient/Views/Home/_Authentication.cshtml
+++ b/MySelf.WebClient/Views/Home/_Authentication.cshtml
@@ -3,10 +3,10 @@
         <h2>Log in</h2>
         @Html.Partial("_Login")
     </section>
-    <section id="socialLoginPanel">
+    @*<section id="socialLoginPanel">
         <h2>Log in using another service</h2>
         @Html.Action("ExternalLoginsList", "Account", new { ReturnUrl = ViewBag.ReturnUrl })
-    </section>
+    </section>*@
     <p>First time here? <a id="showRegister">Sign up</a></p>
 </div>
 <div class="todoList" id="registerPanel">
